Update and sync

--- a/resource/localization/zh-CN/mapsweepers.properties
+++ b/resource/localization/zh-CN/mapsweepers.properties
@@ -1,6 +1,6 @@
-sniperpenetratedround_ammo=Sniper Ammo
-airboatgun_ammo=Airboat Ammo
-combinecannon_ammo=Dark Energy Ammo
+sniperpenetratedround_ammo=狙击弹药
+airboatgun_ammo=汽艇弹药
+combinecannon_ammo=暗能量弹药
 jcms.title=J CORP MAP SWEEPERS
 jcms.license_notice=Map Sweepers's source code is licensed under the GNU General Public License v3.0. All derived works must also be licensed under the same license. The license's text can be read in the large text field below. What this means, is you can create, host or publish your own versions of Map Sweepers, as long as you keep Octantis Addons (MerekiDor & JonahSoldier) credited, and provide open source code to your version of Map Sweepers, if it's public. Also, we ask you to keep our links (social media and support) in all derived versions of the addon. If you wish to add your own, you may do so, but please keep our original links intact *somewhere*. Majority of assets (all 3D models, voicelines of mission control, and textures for the 3D models) are copyrighted by MerekiDor (contact email: merekidorian@gmail.com) with all rights reserved. These assets may only be used in the context of Map Sweepers. This is a very short version of the terms, you may read the full thing in our GitHub Repository: https://github.com/MerekiDor/mapsweepers
 jcms.license_notice_font=The following license's full text applies to the font which is used in, and distributed with Map Sweepers. The font's name is "IBM Plex Sans", licensed under SIL OPEN FONT LICENSE Version 1.1 by IBM Corp. 
@@ -17,7 +17,7 @@ jcms.class_recon_special=Mobility & Information
 jcms.class_recon_desc=Double-jumping leaves a weak explosion under your feet.\nYou are immune to fall damage, and you run faster than usual.\nWall-hack for some entities & objectives you discover are marked for allies.\nYou can use all weapons while sprinting.
 
 jcms.class_infantry=步兵
-jcms.class_infantry_special=Ammo Conservation
+jcms.class_infantry_special=节约弹药
 jcms.class_infantry_desc=You deal 25% more damage with weapons.\n50% chance to not consume any ammo. Even grenades.\nIf you really just want to shoot things, this is the option for you.
 
 jcms.class_sentinel=哨兵
@@ -25,7 +25,6 @@ jcms.class_sentinel_special=Bullet Sponge
 jcms.class_sentinel_desc=Incredibly strong shield, which you can charge by killing things.\nYou teleport away randomly when your shield is broken.\nReally slow, but sprint speed increases the longer you run for.
 
 jcms.class_engineer=工程师
--- Engineer Gaming(工程师游戏中)这个是TF2社区流行梗,所以无需翻译. 详细信息请查看TF2 Wiki --
 jcms.class_engineer_special=Engineer Gaming
 jcms.class_engineer_desc=You get a gravity gun to move turrets and objects around with.\nCheaper Orbitals & Explosives.\nLower cooldown on all call-ins.\nAll of your defences are empowered.
 
@@ -35,7 +34,8 @@ jcms.cancel=取消
 jcms.remove=移除
 jcms.select=选择
 jcms.selected=已选择
-jcms.favourites=收藏
+jcms.erase=ERASE
+jcms.reset=RESET
 
 jcms.favourites=Favourites
 jcms.liability=LIABILITY
@@ -47,17 +47,21 @@ jcms.evac=EVAC
 jcms.zombiebeacon=Nuke
 jcms.gotoevac=Objectives complete, go to EVAC
 jcms.evaccharged=EVAC is fully charged, get in!
+jcms.suddendeathtip=SUDDEN DEATH: No more credits for kills
+jcms.suddendeathsoon=Evacuate before the sudden death!
+jcms.evacClerks=CLERKS
 
 jcms.obj_flashpoint=Charge Flashpoint
 jcms.obj_jzombie=攻击看到的僵尸
 jcms.obj_evac=撤离
-jcms.obj_evaccharge=充能EVAC来撤离
+jcms.obj_evaccharge=等待充能EVAC然后撤离
 jcms.obj_surv=活下来
 jcms.obj_pushpayload=推车
 jcms.obj_hackcontrolpoint=入侵控制点
 jcms.obj_prep=准备
 jcms.obj_bringpayload=将车推到终点
 jcms.obj_die=接受你的命运
+jcms.obj_suddendeath=Sudden death incoming
 jcms.obj_jrebel=攻击看到的反抗军
 jcms.obj_jcombine=攻击看到的联合军
 jcms.obj_thumpersabotage=破坏蚁狮驱逐器
@@ -202,7 +206,7 @@ jcms.weaknesseshud=WEAKNESSES:
 jcms.classhud=CLASS:
 jcms.warninghud=WARNING:
 jcms.cooldown=CD %s
-jcms.restockammo=Restock Ammo
+jcms.restockammo=补充弹药,按
 jcms.chargepercent=Charge: %.1f%%
 jcms.spectating=Spectating
 jcms.exitdroppod=离开空投舱,按
@@ -215,16 +219,16 @@ jcms.plynoweapons=Stunstick Only
 jcms.deploy=部署!
 jcms.toggleready=切换准备
 jcms.forcestart=(ADMIN) FORCE START
-jcms.leavelobby=GO BACK
+jcms.leavelobby=返回
 jcms.changeclass=Change Class
-jcms.clearloadout=Clear Loadout
-jcms.randomweapon=Buy a Random Weapon
-jcms.getextraammo=Get Extra Ammo
+jcms.clearloadout=所有卸下装备
+jcms.randomweapon=购买随机武器
+jcms.getextraammo=获取额外弹药
 jcms.mapmissing=You do not have this map!
-jcms.loadout=LOADOUT
+jcms.loadout=装备
 jcms.loadout_tip=These are your weapons. Click on one to sell it. You also get a free stunstick.
-jcms.shop=WEAPON SHOP
-jcms.shop_locator=Shop
+jcms.shop=武器商店
+jcms.shop_locator=商店
 jcms.shop_tip=Click on a weapon to buy it. Click again to buy extra ammo for it. Right click to mark/unmark as favourite.
 jcms.mission=任务
 jcms.information=关于
@@ -237,26 +241,31 @@ jcms.preptodeploy=PREPARING TO DEPLOY
 jcms.ready=Ready
 jcms.countdowntomission=Countdown to Mission
 jcms.missionbegins=Mission Begins
+jcms.missioninprogress=In Progress
+jcms.generatingmap=Generating Map
 jcms.loadedpods=LOADED PODS
 jcms.nodata=NO DATA
 jcms.selltheweapon=卖掉武器
 jcms.buyxcount=购买 x%d
 jcms.sellxcount=卖掉 x%d
-jcms.cashhud=CASH
+jcms.cashhud=现金
 jcms.cashhud_old=OLD STARTING CASH
 jcms.cashhud_new=NEW STARTING CASH
 jcms.cashhud_none=No cash was lost or earned.
 jcms.costhud=COST
 jcms.orderscrolltip=Scrolling the MOUSE WHEEL will select other orders in a category.
 jcms.firstaidtip=医疗剩余: %d
-jcms.restocktip=弹药剩余: %d
+jcms.restocktip=弹药剩余
 jcms.umbrellatitle=JCorp Super-Colliding Super-Umbrella of Doom 9000 V3.152a
-jcms.pushtip=Press %s to Push
+jcms.pushtip=按 %s 推动
+jcms.compasszdiff_same=ON THE SAME LEVEL
+jcms.compasszdiff_above=%s ABOVE
+jcms.compasszdiff_below=%s BELOW
 
 jcms.mapvote_mp=Vote for our next destination
 jcms.mapvote_solo=Choose the next map
 
-jcms.missionvictory=MISSION COMPLETE
+jcms.missionvictory=任务完成
 jcms.missiondefeat=YOU FAILED
 jcms.missionvictory_npc=SWEEPERS WON
 jcms.missiondefeat_npc=SWEEPERS LOST
@@ -296,35 +305,36 @@ jcms.menututor_desc_sp1=你是第一次玩 Map Sweepers 这个模式吗?
 jcms.menututor_desc_sp2=我们为您准备了一个教程.
 jcms.menututor_desc_mp1=选择 Map Sweepers 游戏模式,
 jcms.menututor_desc_mp2=然后在单人模式下启动地图 'jcms_tutorial'.
+jcms.menututor_desc_mp3=singleplayer to complete the tutorial.
 jcms.menututor_btn=游玩教程
 jcms.modal_joinasnpc_description1=Warning! NPC-team is not intended to be a fair fight!
 jcms.modal_joinasnpc_description2=If you're new, you should play Sweepers.
 jcms.modal_joinasnpc_warning=You will not be able to switch back once you deploy.
 
-jcms.sortby=Sort by
-jcms.sortmode_name=Name
-jcms.sortmode_price=Price
-jcms.sortmode_damage=Damage
-jcms.sortmode_firerate=Firerate
+jcms.sortby=排序方式
+jcms.sortmode_name=名称
+jcms.sortmode_price=价格
+jcms.sortmode_damage=伤害
+jcms.sortmode_firerate=射速
 jcms.sortmode_dps=DPS
-jcms.sortmode_clipsize=Clip Size
-jcms.catsby=Categories
-jcms.catmode_default=Default
-jcms.catmode_none=None
-jcms.catmode_ammo=By ammo
-jcms.catmode_base=By base
-jcms.catmode_slot=By slot
-jcms.gun_spread=Spread
-jcms.gun_range=Range
+jcms.sortmode_clipsize=弹匣容量
+jcms.catsby=分类
+jcms.catmode_default=默认
+jcms.catmode_none=无
+jcms.catmode_ammo=按弹药分类
+jcms.catmode_base=按Baes分类
+jcms.catmode_slot=按武器种类分类
+jcms.gun_spread=散布
+jcms.gun_range=射程
 jcms.unknownbase0=Unrecognized weapon
 jcms.unknownbase1=Stats may be inaccurate
 
-jcms.weaponcat0=Melee & Tools
-jcms.weaponcat1=Sidearms
-jcms.weaponcat2=Automatic Weapons
-jcms.weaponcat3=Heavy Weapons
-jcms.weaponcat4=Explosives
-jcms.weaponcat5=Other
+jcms.weaponcat0=近战和工具
+jcms.weaponcat1=副武器
+jcms.weaponcat2=自动武器
+jcms.weaponcat3=重型武器
+jcms.weaponcat4=爆炸物
+jcms.weaponcat5=其他
 
 jcms.stats=统计数据
 jcms.stats_filter=兵种过滤:
@@ -345,7 +355,7 @@ jcms.stats_other=其他
 jcms.stats_missions_started=游玩数
 jcms.stats_missions_completed=完成数
 jcms.stats_missions_winrate=成功率
-jcms.stats_deaths=死亡数
+jcms.stats_deaths=死亡次数
 jcms.stats_ffire=友军击杀
 jcms.stats_orders=使用命令
 jcms.stats_hacks=入侵终端
@@ -367,7 +377,7 @@ jcms.plynotif7=PLAYER 受到惩罚.
 jcms.plynotif8=PLAYER 现在是NPC!
 jcms.plynotif9=PLAYER 离开了小队.
 jcms.plynotif10=PLAYER 正在加入你!
-jcms.plynotif11=PLAYER 被提取!
+jcms.plynotif11=PLAYER 已撤离!
 jcms.plynotif12=PLAYER 死于辐射.
 jcms.plynotif13=PLAYER 被压扁了.
 jcms.plynotif14=PLAYER 死于毒素.
@@ -381,23 +391,23 @@ jcms.plynotif_alt5=PLAYER 标记 THING!
 jcms.plynotif_alt6=PLAYER 建造了 THING!
 jcms.plynotif_alt7=PLAYER 呼叫了 THING!
 
-jcms.hint_spawnmenu=Press Q to open the ORDER MENU
-jcms.hint_firstaid=FIRST AID DROPs can be ordered to heal yourself
-jcms.hint_ammo=AMMO RESTOCK crates can be ordered from the spawn menu.
-jcms.hint_turretrep=Turrets can be REPAIRED by hitting them with a STUNSTICK
-jcms.hint_respawn=Dead teammates can be respawned by ordering RESPAWN BEACONS
-jcms.hint_antiair=ANTI-AIR MISSILES can be used to take out flying enemies
-jcms.hint_breach=Use BREACHING CHARGE to open this door
-jcms.hint_leeches=Staying in the water for too long will attract LEECHES
-jcms.hint_polyp=Airborne toxins detected. Vacate the area or DESTROY THE SOURCE
-jcms.hint_uniqueorders=This mission has UNIQUE ORDERS. Check your spawn menu for options
-jcms.hint_stuck=You seem to be STUCK. We're teleporting you out
+jcms.hint_spawnmenu=按 Q 打开战略配备菜单
+jcms.hint_firstaid=可以呼叫"医疗补给"来治疗自己
+jcms.hint_ammo=可以呼叫"弹药补给"来补充弹药
+jcms.hint_turretrep=你可以使用电棍敲击炮塔来维修
+jcms.hint_respawn=死去的队友可以通过复活信标来复活
+jcms.hint_antiair=防空导弹可以消灭空中敌人
+jcms.hint_breach=使用突破冲锋来"打开"这个门
+jcms.hint_leeches=水里面呆太久把水蛭吸引过来
+jcms.hint_polyp=检测到空气中有毒素,立刻离开或者摧毁源头
+jcms.hint_uniqueorders=使用中包含特殊的战略配备,查看你的战略配备菜单
+jcms.hint_stuck=你似乎被困住了,我们正在尝试把你弄出去
 
-jcms.reward_evac=Evacuated
-jcms.reward_victory=Mission Complete
-jcms.reward_failure=Failed the Mission
+jcms.reward_evac=撤离
+jcms.reward_victory=任务完成
+jcms.reward_failure=任务失败
 jcms.reward_clerks=%d clerk recruits
-jcms.reward_other=Other
+jcms.reward_other=其他
 
 jcms.hp=HP
 jcms.shield=SHIELD
@@ -408,39 +418,41 @@ jcms.classmenu_mobility=Mobility
 jcms.classmenu_special=Special:
 
 jcms.terminal_unlocked=已解锁!
-jcms.terminal_cashcache=J CORP CASH CACHE
-jcms.terminal_unlock=UNLOCK
-jcms.terminal_withdraw=WITHDRAW
-jcms.terminal_deposit=DEPOSIT
-jcms.terminal_all=ALL
-jcms.terminal_augmentstation=UPGRADE STATION
-jcms.terminal_augment_incendiary=Flaming Damage
-jcms.terminal_augment_shield=+%d%% Max Shield
-jcms.terminal_augment_explosive=Explosive Bullets
-jcms.terminal_cost=Cost: %d J
-jcms.terminal_soldout=Sold out
-jcms.terminal_respawnchamber=RESPAWN CHAMBER
-jcms.terminal_thumpercontrols=THUMPER CONTROLS
-jcms.terminal_enable=ENABLE
-jcms.terminal_disable=DISABLE
-jcms.terminal_active=ACTIVE
-jcms.terminal_nukecontrols=NUKE CONTROLS
+jcms.terminal_cashcache=J 公司现金缓存
+jcms.terminal_unlock=解锁
+jcms.terminal_withdraw=取出
+jcms.terminal_deposit=存入
+jcms.terminal_all=全部
+jcms.terminal_augmentstation=升级站
+jcms.terminal_augment_incendiary=火焰伤害
+jcms.terminal_augment_shield=+%d%% 护盾上限
+jcms.terminal_augment_explosive=爆炸子弹
+jcms.terminal_cost=费用: %d J
+jcms.terminal_soldout=售出
+jcms.terminal_respawnchamber=复活室
+jcms.terminal_thumpercontrols=THUMPER 控制器
+jcms.terminal_enable=启用
+jcms.terminal_disable=禁用
+jcms.terminal_active=活动
+jcms.terminal_nukecontrols=NUKE 控制器
 jcms.terminal_nukearming=ARMING THE NUKE
 jcms.terminal_nukearmingtip=Protect it from the zombies!
 jcms.terminal_arm=ARM
 jcms.terminal_nukehelp=Nuke must be armed and protected until it's ready!
+jcms.error=错误
+jcms.terminal_nukesweeperspresent=MIN. %d SWEEPERS MUST BE PRESENT TO ARM
 jcms.terminal_gambling1=FLIP YOUR CASH!
 jcms.terminal_gambling2=DOUBLE OR NOTHING!
 jcms.terminal_gambling3=FLIP!
 jcms.terminal_gambling4=YOU MUST GAMBLE!
+jcms.terminal_gunlocker=WEAPON LOCKER
+jcms.terminal_gunlocker_take=TAKE WEAPON
 jcms.terminal_inactive=INACTIVE
 jcms.terminal_weapons=武器
 jcms.terminal_buymoreguns=Buy more guns
 jcms.terminal_ammo=弹药
 jcms.terminal_selweapon=手持武器
 jcms.terminal_ammoname=弹药: %s
-jcms.error=错误
-jcms.terminal_nukesweeperspresent=MIN. %d SWEEPERS MUST BE PRESENT TO ARM
 jcms.terminal_weaponinstruction=Switch your weapon to buy ammo for it or to sell it
 jcms.terminal_circuit_hint=找到并连接相同的数字
 jcms.terminal_writethisdown=Write this down
@@ -612,22 +624,23 @@ jcms.credits_missiondesign=Mission Programmer
 jcms.credits_classdesign=Player Classes
 jcms.credits_ai=NPC AI Extensions
 jcms.credits_va=Mission Control V.A.
-jcms.credits_testers=Closed Beta Testers
-jcms.credits_thanks=Special Thanks
+jcms.credits_testers=Beta封闭测试名单
+jcms.credits_thanks=特别感谢
+jcms.credits_github=GitHub contributors:
 
 jcms.unlocklvl=Unlocked at LVL %d
 jcms.oursocialmedia=关注我们!
 jcms.ourgame=查看我们的游戏(Discord)
-jcms.othercontent=Extras
+jcms.othercontent=额外内容
 jcms.codex=Codex
-jcms.bestiary=Bestiary
-jcms.extra_othermods=Our Other Addons
+jcms.bestiary=敌人图鉴
+jcms.extra_othermods=我们的其他的模组
 jcms.extra_maps=推荐地图
-jcms.extra_expansions=Map Sweepers Expansions
-jcms.extra_compatibles=Compatible Addons
-jcms.extra_legal1=Legal - Map Sweepers
-jcms.extra_legal2=Legal - Font
-jcms.extra_github=GitHub Repository
+jcms.extra_expansions=Map Sweepers 扩展包
+jcms.extra_compatibles=兼容Mod
+jcms.extra_legal1=许可证 - Map Sweepers
+jcms.extra_legal2=许可证 - 字体
+jcms.extra_github=GitHub 仓库
 jcms.winstreak=Win Streak
 jcms.winstreak_title=WIN STREAK
 jcms.unhack_tip=HIT WITH STUNSTICK TO HACK
@@ -645,6 +658,9 @@ jcms.opt_announcer=Enable Announcer Voicelines
 jcms.opt_imperial=Imperial Measurements
 jcms.opt_motionsickness=Motion Sickness Mode
 jcms.opt_nomusic=Disable Mission Start Ambient Music
+jcms.opt_novignette=Disable Vignette
+jcms.opt_nocolourfilter=Disable Colour Tint
+jcms.opt_noneardeathfilter=Disable Near-Death Black&White Filter
 jcms.opt_customizehud=HUD
 jcms.opt_hudscale=HUD Scale
 jcms.opt_crosshair=Crosshair
@@ -665,6 +681,7 @@ jcms.opt_color_adjust=Autogenerate Dark Colors
 jcms.opt_color_reset=Reset to Defaults
 
 jcms.opt_commonsettings=Gameplay Settings
+jcms.opt_difficultysettings=Difficulty Settings
 jcms.opt_noepisodes=Disable HL2 Episodes content on this server
 jcms.opt_ffmul=Friendly Fire damage mult.
 jcms.opt_softcap=NPCs Soft Cap
@@ -710,3 +727,9 @@ jcms.opt_orders_reset=RESET TO DEFAULTS
 
 jcms.opt_tab_client=My Preferences
 jcms.opt_tab_server=Server/Game Settings
+
+jcms.antilag_title=Lagging?
+jcms.antilag_desc=To help with the lag, please do this:
+jcms.antilag_64bit=Switch to 64-bit Garry's Mod (Google how to)
+jcms.antilag_mcore=Enable multicore rendering (Click here!)
+jcms.chatplaceholder=Say something...
