--- a/resource/localization/zh-CN/mapsweepers_tutorial.properties
+++ b/resource/localization/zh-CN/mapsweepers_tutorial.properties
@@ -6,7 +6,7 @@ jcms.obj_tutorialphase1=破门而入
 jcms.obj_tutorialphase2=放置一个跳跃板并跳上去
 jcms.obj_tutorialphase3=获得足够的现金来放置加特林炮塔
 jcms.obj_tutorialphase4=购买武器
-jcms.obj_tutorialphase5=在"战略配备"轮盘上使用地毯式轰炸(轨道轰炸)
+jcms.obj_tutorialphase5=在"战略配备"轮盘上使用地毯式轰炸
 jcms.obj_tutorialphase6=在"战略配备"轮盘上使用轨道激光
 jcms.obj_tutorialphase7=使用"战略配备"来获取更多的弹药和恢复血量
 jcms.obj_tutorialphase8=使用复活信标到达另一边
