Update mapsweepers.properties zh-CN localization file

--- a/resource/localization/zh-CN/mapsweepers.properties
+++ b/resource/localization/zh-CN/mapsweepers.properties
@@ -34,20 +34,20 @@ jcms.cancel=取消
 jcms.remove=移除
 jcms.select=选择
 jcms.selected=已选择
-jcms.erase=ERASE
-jcms.reset=RESET
+jcms.erase=删除
+jcms.reset=重置
 
-jcms.favourites=Favourites
+jcms.favourites=收藏
 jcms.liability=LIABILITY
 
-jcms.objective=Objective
+jcms.objective=目标
 jcms.flashpoint=Flashpoint
-jcms.thumper=Thumper
+jcms.thumper=蚁狮驱逐器
 jcms.evac=EVAC
-jcms.zombiebeacon=Nuke
-jcms.gotoevac=Objectives complete, go to EVAC
-jcms.evaccharged=EVAC is fully charged, get in!
-jcms.suddendeathtip=SUDDEN DEATH: No more credits for kills
+jcms.zombiebeacon=核弹
+jcms.gotoevac=目标完成, 快前往EVAC
+jcms.evaccharged=EVAC充能完成, 快上来!
+jcms.suddendeathtip=突然死亡: 不能再获得击杀奖励
 jcms.suddendeathsoon=Evacuate before the sudden death!
 jcms.evacClerks=CLERKS
 
@@ -75,62 +75,62 @@ jcms.obj_mainframeterminals2=入侵终端 (护盾充能器)
 jcms.obj_mainframeterminals3=入侵终端 (轨道轰炸)
 
 jcms.restock=弹药补给
-jcms.restock_desc=Drops a crate that gives you every ammo type you need. You get roughly 400 J worth of ammo in total
+jcms.restock_desc=将会掉落一个箱子. 里面装有你需要的所有弹药,大概总价值为400 J
 jcms.turret_smg=SMG炮塔
-jcms.turret_smg_desc=Constant gunfire against weak enemies
+jcms.turret_smg_desc=会持续向弱小的敌人开火
 jcms.firstaid=医疗箱
-jcms.firstaid_desc=Drops a crate that restores 25 HP per use, up to 100 HP total
+jcms.firstaid_desc=将会掉落一个箱子. 每次使用恢复25HP最多恢复100HP
 jcms.jumppad=跳跃板
-jcms.jumppad_desc=Places down a pad that boosts your jumping height. Protects against fall damage
+jcms.jumppad_desc=放置一个垫子,可以让你蹦的很高.  Protects against fall damage
 jcms.mine_c4=定时炸药
-jcms.mine_c4_desc=Huge, powerful explosion 10 seconds after being planted
+jcms.mine_c4_desc=放置后倒计时十秒钟之后,产生非常巨大的爆炸
 jcms.turret_shotgun=散弹枪炮塔
-jcms.turret_shotgun_desc=Fires in a wide arc and decimates everyone up-close
+jcms.turret_shotgun_desc=大范围内射击,击杀近距离的所有敌人
 jcms.shelling=轨道轰炸
-jcms.shelling_desc=Orbital bombing affecting a big area for 1 minute
+jcms.shelling_desc=使用轨道轰炸持续一分钟的轰击地面
 jcms.mine_breach=突破冲锋(Breaching Charge)
-jcms.mine_breach_desc=Punches out locked doors. VERY STRONG knockback on anything else you attach this to
-jcms.turret_bolter=Bolter Turret
-jcms.turret_bolter_desc=Slowly fires powerful and accurate bolts
+jcms.mine_breach_desc=强制打开锁着的门,对任何可以放置的物体上造成非常强大的冲击力
+jcms.turret_bolter=轨道炮炮塔
+jcms.turret_bolter_desc=开火间隔较长但威力强大和精准的钢针
 jcms.i_umbrella="雨伞"
-jcms.i_umbrella_desc=Provides cover from the toxic rain
+jcms.i_umbrella_desc=帮助你抵挡含有毒素的雨
 jcms.ts_sapper=Sapper
 jcms.ts_sapper_desc=Slap this on a thumper and it'll slowly destroy it. Cheaper than C4, if you have time to spare
 jcms.autohacker=自动入侵装置
-jcms.autohacker_desc=Attach this to a terminal and protect it from NPCs. In 1 minute the terminal will be hacked
+jcms.autohacker_desc=把它连接上终端,并且保护一分钟随后即可完成入侵
 jcms.locator=定位器
-jcms.locator_desc=Shows distance & compass direction towards the nearest objective. Useful on big maps
+jcms.locator_desc=显示距离和在罗盘上显示最近的目标位置, 这个在很大地图上很有用
 jcms.shieldcharger=护盾充能器
-jcms.shieldcharger_desc=Charges nearby players' shields at a rate of 5/s. Will eventually run out
+jcms.shieldcharger_desc=以每秒5点的速度恢复附近玩家的护盾直到耗尽为止
 jcms.respawnbeacon=复活信标
-jcms.respawnbeacon_desc=If someone dies, they will come back on this single-use platform
+jcms.respawnbeacon_desc=如果有玩家阵亡, 他们就会复活在这个一次性平台上
 jcms.tesla=特斯拉线圈
-jcms.tesla_desc=Fires electricity that arcs through multiple targets
-jcms.mine_multiblast=MultiBlast Mine
-jcms.mine_multiblast_desc=A low-range mine that can explode 4 times before disappearing
+jcms.tesla_desc=发射电流攻击多个目标
+jcms.mine_multiblast=多重爆炸地雷
+jcms.mine_multiblast_desc=一个低范围的地雷,在失效之前最多可以爆炸4次
 jcms.carpetbombing=地毯式轰炸
-jcms.carpetbombing_desc=Drops many weak, inaccurate bombs along a straight path
+jcms.carpetbombing_desc=沿着一条直线投掷多个微小, 但不精准的炸弹
 jcms.antiairmissile=防空导弹
-jcms.antiairmissile_desc=A missile that follows and detonates next to flying NPCs, such as Gunships or Helicopters
+jcms.antiairmissile_desc=跟踪空中的敌人并在附近引爆的导弹, 比如武装直升机
 jcms.orbitalbeam=轨道激光
 jcms.orbitalbeam_desc=发射一束强大的、自动寻敌的激光束，摧毁一切
 jcms.vtol=垂直起降运输机
-jcms.vtol_desc=DS-2 VTOL with 6 passenger seats for fast transportation around the area
+jcms.vtol_desc=DS-2 VTOL 拥有6个乘坐位, 可以在地区快速转移的载具
 jcms.turret_gatling=加特林炮塔
-jcms.turret_gatling_desc=Turns slowly, but provides heavy suppressive fire
+jcms.turret_gatling_desc=旋转缓慢,但是可以提供强大压制火力的炮塔
 jcms.hovertank=坦克
-jcms.hovertank_desc=LHT-6 with dual plasma cannons and micro-missile swarm launchers
+jcms.hovertank_desc=LHT-6 装备有双等离子火炮和微型导弹发射器的载具
 jcms.turret_smrls=导弹平台
-jcms.turret_smrls_desc=Anti-Air + Mortar, all in one. Attacks everything with homing missiles
+jcms.turret_smrls_desc=防空和迫击炮二合一的多功能炮塔
 
-jcms.missionunknown=MISSION UNKNOWN
+jcms.missionunknown=未知任务
 jcms.payload=推车
-jcms.payload_entity=The Payload
-jcms.payload_desc=Stick close to a platform on rails to move it from point A to point B. Killing enemies next to it will give it a speed boost.
+jcms.payload_entity=字面意思推车
+jcms.payload_desc=来到目标旁边把它从A推到B, 如果附近没有敌人会更快.
 jcms.thumpersabotage=破坏蚁狮驱逐器
 jcms.thumpersabotage_desc=找到并摧毁地图上的所有蚁狮驱逐器\n随着你的任务进度蚁狮会开始替换联合军士兵\n然后建议是使用炸药
 jcms.violenceflashpoints=Violence Flashpoints
-jcms.violenceflashpoints_desc=Charge all Flashpoints by killing enough NPCs next to them. A powerful boss will be released afterwards.
+jcms.violenceflashpoints_desc=在装置附近击杀敌人为装置充能, 当所有装置充能完毕之后会释放出来一个强大的Boss.
 jcms.hell=地狱
 jcms.hell_desc=你有 1 分钟的准备时间.
 jcms.thumperreactivation=重新激活蚁狮驱逐器
@@ -140,18 +140,18 @@ jcms.mainframe_desc=Hack the power lines supplying an RGG Gambling Mainframe wit
 jcms.infestation=感染
 jcms.infestation_desc=Polyps已经入侵该区域\n寻找并启动核弹清理该地图.\n请务必保护核弹直到启动 ,否则会提前引爆 !
 
-jcms.flashpoint_completion=Flashpoint completion: %d%%
-jcms.thumpersabotage_completion=%d%% thumpers destroyed
-jcms.thumperreactivation_completion=%d%% thumpers reactivated
-jcms.payload_completion=Payload progress: %d%%
-jcms.payload_stopped=Payload is at a checkpoint! Hack it.
+jcms.flashpoint_completion=Flashpoint 完成进度: %d%%
+jcms.thumpersabotage_completion=%d%% 的蚁狮驱逐器已摧毁
+jcms.thumperreactivation_completion=%d%% 的蚁狮驱逐器已重新激活
+jcms.payload_completion=推车进度: %d%%
+jcms.payload_stopped=已经推到检查点, 需要入侵终端!
 jcms.infestation_completion=Nukes armed: %d%%
-jcms.infestation_completion_failed=Failed to defend the nuke. Nuclear fallout detected.
-jcms.thumpersabotagecaption=OBJECTIVE: Attack it until it stops working
-jcms.thumpersabotagedesc1=Anything works. Check your order menu for options
-jcms.thumpersabotagedesc2=Explosives are more effective
-jcms.mainframe_tag=Mainframe
-jcms.mainframe_terminal=Terminal
+jcms.infestation_completion_failed=核弹防御失败并意外爆炸, 检测到有大量核辐射
+jcms.thumpersabotagecaption=任务目标: 攻击它直到完全停止工作
+jcms.thumpersabotagedesc1=什么方式都可以, 看你的战略配备轮盘
+jcms.thumpersabotagedesc2=使用爆炸物更高效
+jcms.mainframe_tag=主机
+jcms.mainframe_terminal=终端
 jcms.mainframe_completion1=[TRACK 1 COMPLETE] Zombies Released
 jcms.mainframe_completion2=[TRACK 2 COMPLETE] Shield-charger Enabled
 jcms.mainframe_completion3=[TRACK 3 COMPLETE] Orbital Bombardment Initiated
@@ -181,7 +181,7 @@ jcms.rebel=反抗军
 jcms.solo=单人任务
 jcms.npcshud=NPCs:
 jcms.pod_text=- J 公司清除计划 -
-jcms.locator_scanning=SCANNING AREA
+jcms.locator_scanning=扫描区域
 jcms.evac_title1=CHARGING %d%%
 jcms.evac_title2=NOT CHARGING
 jcms.evac_title3=CHARGING SLOWLY %d%%
@@ -191,10 +191,10 @@ jcms.userdead=用户已经寄了
 jcms.userdead_err=jcorp_error_usr_is_fckin_useless
 jcms.findweapon=J CORP URGES YOU TO FIND A WEAPON
 jcms.findweapon_err=jcorp_error_usr_is_useless
-jcms.awaitingorders=Awaiting orders from HQ
+jcms.awaitingorders=等待HQ命令
 jcms.theirprogress=Their progress:
-jcms.sweeperrespawns=RESPAWNS: %d
-jcms.respawns_hud=RESPAWNS AVAILABLE: x%d
+jcms.sweeperrespawns=复活: %d
+jcms.respawns_hud=可复活: x%d
 jcms.deadteammates_hud=SWEEPERS NEED A RESPAWN: x%d
 jcms.missionhud=任务:
 jcms.damagedealt=Damage: %d
@@ -211,46 +211,46 @@ jcms.chargepercent=Charge: %.1f%%
 jcms.spectating=Spectating
 jcms.exitdroppod=离开空投舱,按
 jcms.plystatus_dead=K.I.A.
-jcms.plystatus_evac=Evacuated
+jcms.plystatus_evac=撤离
 jcms.plystatus_npc=NPCs
-jcms.plystatus_unknown=Unknown
+jcms.plystatus_unknown=未知
 jcms.plyleft=(left)
-jcms.plynoweapons=Stunstick Only
+jcms.plynoweapons=仅限电棒
 jcms.deploy=部署!
 jcms.toggleready=切换准备
-jcms.forcestart=(ADMIN) FORCE START
+jcms.forcestart=(管理员) 强制开始
 jcms.leavelobby=返回
-jcms.changeclass=Change Class
+jcms.changeclass=更改职业
 jcms.clearloadout=所有卸下装备
 jcms.randomweapon=购买随机武器
 jcms.getextraammo=获取额外弹药
-jcms.mapmissing=You do not have this map!
+jcms.mapmissing=你没有这个地图!
 jcms.loadout=装备
-jcms.loadout_tip=These are your weapons. Click on one to sell it. You also get a free stunstick.
+jcms.loadout_tip=这里是你的武器,点击任意一个即可卖掉. 当然你还自带一个免费的电棍
 jcms.shop=武器商店
 jcms.shop_locator=商店
-jcms.shop_tip=Click on a weapon to buy it. Click again to buy extra ammo for it. Right click to mark/unmark as favourite.
+jcms.shop_tip=点击一个武器即可购买,再次点击可以购买额外弹药. 右键可以收藏再次右键可以取消
 jcms.mission=任务
 jcms.information=关于
 jcms.options=设置
 jcms.mystats=我的统计数据
-jcms.ourdiscord=Our Discord
-jcms.ourdiscord_specify=Our GMod Addons Discord
-jcms.supportus=Support us
-jcms.preptodeploy=PREPARING TO DEPLOY
-jcms.ready=Ready
-jcms.countdowntomission=Countdown to Mission
-jcms.missionbegins=Mission Begins
-jcms.missioninprogress=In Progress
-jcms.generatingmap=Generating Map
-jcms.loadedpods=LOADED PODS
-jcms.nodata=NO DATA
+jcms.ourdiscord=我们的Discord
+jcms.ourdiscord_specify=我们的GMod插件Discord
+jcms.supportus=支持我们
+jcms.preptodeploy=准备好部署
+jcms.ready=准备就绪
+jcms.countdowntomission=任务倒计时
+jcms.missionbegins=任务开始
+jcms.missioninprogress=进行中
+jcms.generatingmap=生成地图
+jcms.loadedpods=加载登陆舱
+jcms.nodata=无数据
 jcms.selltheweapon=卖掉武器
 jcms.buyxcount=购买 x%d
 jcms.sellxcount=卖掉 x%d
 jcms.cashhud=现金
-jcms.cashhud_old=OLD STARTING CASH
-jcms.cashhud_new=NEW STARTING CASH
+jcms.cashhud_old=原先的初始现金
+jcms.cashhud_new=新的初始现金
 jcms.cashhud_none=No cash was lost or earned.
 jcms.costhud=COST
 jcms.orderscrolltip=Scrolling the MOUSE WHEEL will select other orders in a category.
@@ -262,13 +262,13 @@ jcms.compasszdiff_same=ON THE SAME LEVEL
 jcms.compasszdiff_above=%s ABOVE
 jcms.compasszdiff_below=%s BELOW
 
-jcms.mapvote_mp=Vote for our next destination
-jcms.mapvote_solo=Choose the next map
+jcms.mapvote_mp=投票选择下一张地图
+jcms.mapvote_solo=选择下一张地图
 
 jcms.missionvictory=任务完成
-jcms.missiondefeat=YOU FAILED
-jcms.missionvictory_npc=SWEEPERS WON
-jcms.missiondefeat_npc=SWEEPERS LOST
+jcms.missiondefeat=任务失败
+jcms.missionvictory_npc=清道夫胜利
+jcms.missiondefeat_npc=清道夫失败
 jcms.bottomline_victory=You have completed your mission, and you have ERR:NUM_TOO_BIG more to do before J Corp considers remembering your name
 jcms.bottomline_defeat=You have failed and died. After respawning, you will be sentenced to watching 15 minutes of lobotomy-core ADHD shorts and force-fed 10 IQ "Did you know?" mediaslop for re-education
 jcms.bottomline_victory_npc=The Sweepers have succeeded in their mission. NPCs were left devastated, shocked, shot, exploded, dissolved, etc.
@@ -305,7 +305,7 @@ jcms.menututor_desc_sp1=你是第一次玩 Map Sweepers 这个模式吗?
 jcms.menututor_desc_sp2=我们为您准备了一个教程.
 jcms.menututor_desc_mp1=选择 Map Sweepers 游戏模式,
 jcms.menututor_desc_mp2=然后在单人模式下启动地图 'jcms_tutorial'.
-jcms.menututor_desc_mp3=singleplayer to complete the tutorial.
+jcms.menututor_desc_mp3=然后完成教程.
 jcms.menututor_btn=游玩教程
 jcms.modal_joinasnpc_description1=Warning! NPC-team is not intended to be a fair fight!
 jcms.modal_joinasnpc_description2=If you're new, you should play Sweepers.
@@ -357,7 +357,7 @@ jcms.stats_missions_completed=完成数
 jcms.stats_missions_winrate=成功率
 jcms.stats_deaths=死亡次数
 jcms.stats_ffire=友军击杀
-jcms.stats_orders=使用命令
+jcms.stats_orders=使用战略配备
 jcms.stats_hacks=入侵终端
 
 jcms.achievements=成就
@@ -383,7 +383,7 @@ jcms.plynotif13=PLAYER 被压扁了.
 jcms.plynotif14=PLAYER 死于毒素.
 jcms.plynotif15=PLAYER 被腐蚀.
 
-jcms.plynotif_alt1=PLAYER destroyed THING!
+jcms.plynotif_alt1=PLAYER 摧毁了 THING!
 jcms.plynotif_alt2=PLAYER captured THING!
 jcms.plynotif_alt3=PLAYER located THING!
 jcms.plynotif_alt4=PLAYER lost THING!
@@ -626,7 +626,7 @@ jcms.credits_ai=NPC AI Extensions
 jcms.credits_va=Mission Control V.A.
 jcms.credits_testers=Beta封闭测试名单
 jcms.credits_thanks=特别感谢
-jcms.credits_github=GitHub contributors:
+jcms.credits_github=GitHub贡献者:
 
 jcms.unlocklvl=Unlocked at LVL %d
 jcms.oursocialmedia=关注我们!
@@ -638,11 +638,11 @@ jcms.extra_othermods=我们的其他的模组
 jcms.extra_maps=推荐地图
 jcms.extra_expansions=Map Sweepers 扩展包
 jcms.extra_compatibles=兼容Mod
-jcms.extra_legal1=许可证 - Map Sweepers
-jcms.extra_legal2=许可证 - 字体
+jcms.extra_legal1=Map Sweepers - 许可证
+jcms.extra_legal2=字体 - 许可证
 jcms.extra_github=GitHub 仓库
-jcms.winstreak=Win Streak
-jcms.winstreak_title=WIN STREAK
+jcms.winstreak=连胜
+jcms.winstreak_title=连胜
 jcms.unhack_tip=HIT WITH STUNSTICK TO HACK
 jcms.for=For
 
@@ -654,82 +654,82 @@ jcms.ordermsg_invalidtarget=No Valid Target
 jcms.ordermsg_badplacement=Bad Placement
 jcms.ordermsg_cooldown=Wait %s More Seconds
 
-jcms.opt_announcer=Enable Announcer Voicelines
-jcms.opt_imperial=Imperial Measurements
-jcms.opt_motionsickness=Motion Sickness Mode
-jcms.opt_nomusic=Disable Mission Start Ambient Music
-jcms.opt_novignette=Disable Vignette
-jcms.opt_nocolourfilter=Disable Colour Tint
-jcms.opt_noneardeathfilter=Disable Near-Death Black&White Filter
+jcms.opt_announcer=启用通报员(任务中心)语音
+jcms.opt_imperial=英制测量
+jcms.opt_motionsickness=晕动病模式
+jcms.opt_nomusic=禁用任务开始的氛围音乐
+jcms.opt_novignette=禁用 Vignette
+jcms.opt_nocolourfilter=禁用 Colour Tint
+jcms.opt_noneardeathfilter=禁用濒死的黑白滤镜
 jcms.opt_customizehud=HUD
-jcms.opt_hudscale=HUD Scale
-jcms.opt_crosshair=Crosshair
-jcms.opt_crosshair_style=Style
-jcms.opt_crosshair_dot=Draw Dot
-jcms.opt_crosshair_showammo=Ammo Mode
-jcms.opt_crosshair_showammo0=Don't show
-jcms.opt_crosshair_showammo1=Disappearing circle
-jcms.opt_crosshair_showammo2=Circle (always)
-jcms.opt_crosshair_showammo3=Disappearing number
-jcms.opt_crosshair_showammo4=Number (always)
-jcms.opt_crosshair_width=Thickness
-jcms.opt_crosshair_length=Length
-jcms.opt_crosshair_gap=Extra Gap
-jcms.opt_preferences=Preferences
-jcms.opt_color_randomize=Randomize Theme
-jcms.opt_color_adjust=Autogenerate Dark Colors
-jcms.opt_color_reset=Reset to Defaults
+jcms.opt_hudscale=HUD缩放
+jcms.opt_crosshair=准心
+jcms.opt_crosshair_style=样式
+jcms.opt_crosshair_dot=准心中心的小点
+jcms.opt_crosshair_showammo=弹药模式
+jcms.opt_crosshair_showammo0=不显示
+jcms.opt_crosshair_showammo1=渐变渐出的圆圈
+jcms.opt_crosshair_showammo2=圆圈(一直显示)
+jcms.opt_crosshair_showammo3=渐变渐出的数字
+jcms.opt_crosshair_showammo4=数字 (一直显示)
+jcms.opt_crosshair_width=厚度
+jcms.opt_crosshair_length=长度
+jcms.opt_crosshair_gap=额外间距
+jcms.opt_preferences=偏好设置
+jcms.opt_color_randomize=随机主题
+jcms.opt_color_adjust=自动生成深色
+jcms.opt_color_reset=重置为默认值
 
-jcms.opt_commonsettings=Gameplay Settings
-jcms.opt_difficultysettings=Difficulty Settings
-jcms.opt_noepisodes=Disable HL2 Episodes content on this server
-jcms.opt_ffmul=Friendly Fire damage mult.
-jcms.opt_softcap=NPCs Soft Cap
-jcms.opt_softcap_desc1=50 by default. Set to 20-30 to improve performance.
-jcms.opt_softcap_desc2=If there is more than X npcs, new waves will stop spawning. However, the actual size of the waves remains unchanged, meaning you may still have more than X NPCs on the map. The important thing here is that there won't be even MORE afterwards.
-jcms.opt_maps=Map Rotation
+jcms.opt_commonsettings=游戏设置
+jcms.opt_difficultysettings=难度设置
+jcms.opt_noepisodes=在当前服务器上禁用HL2 Episodes内容
+jcms.opt_ffmul=友军伤害倍率
+jcms.opt_softcap=NPC软上限
+jcms.opt_softcap_desc1=默认值为50, 如果设置为20-30可以提高一些性能.
+jcms.opt_softcap_desc2=如果当前NPC数量超过X那下一个回合将会停止刷新,但是每一波实际刷出来的数量不会变. 所以地图上可能依然会有超过X数量的NPC,不过在此之后不会再刷新更多的NPC了
+jcms.opt_maps=地图轮换
 jcms.opt_mapexclude=Never include the current map in the post-mission vote
-jcms.opt_maplist_iswhite=Invert the list above
-jcms.opt_maplist_white=Only use these maps (comma-separated):
-jcms.opt_maplist_black=Excluded maps (comma-separated):
-jcms.opt_cashsettings=Cash Settings
-jcms.opt_cash_start=Starting amount of cash
-jcms.opt_cash_evac=Reward for evacuating
-jcms.opt_cash_victory=Reward for completing the mission
-jcms.opt_cash_maxclerks=Maximum clerks one could evacuate
-jcms.opt_cash_mul_final=Final bounty multiplier
-jcms.opt_cash_mul_base=Base NPC bounty multiplier
-jcms.opt_cash_mul_stunstick=Stunstick kill cash multiplier
-jcms.opt_cash_mul_very_far=Extreme distance kill cash multiplier
-jcms.opt_cash_bonus_sidearm=Pistol & Revolver kills extra cash
-jcms.opt_cash_bonus_airborne=Extra cash for killing NPCs that were midair
+jcms.opt_maplist_iswhite=反转上面的列表
+jcms.opt_maplist_white=仅使用列表中的地图 (使用逗号分开):
+jcms.opt_maplist_black=排除地图 (使用逗号分开):
+jcms.opt_cashsettings=现金设置
+jcms.opt_cash_start=初始现金设置
+jcms.opt_cash_evac=撤离奖励
+jcms.opt_cash_victory=完成任务奖励
+jcms.opt_cash_maxclerks=最大撤离人数
+jcms.opt_cash_mul_final=最终奖励倍率
+jcms.opt_cash_mul_base=基础NPC赏金倍率
+jcms.opt_cash_mul_stunstick=电棒击杀现金倍率
+jcms.opt_cash_mul_very_far=超远距离击杀现金倍率
+jcms.opt_cash_bonus_sidearm=手枪和左轮手枪击杀额外现金
+jcms.opt_cash_bonus_airborne=击落空中敌人获得额外现金
 jcms.opt_cash_bonus_headshot=Extra cash for a headshot finisher (non-instakill)
 jcms.opt_cash_bonus_headshot_instakill=Extra cash for a headshot that was an instakill
-jcms.opt_weaponprices=Weapon Prices
-jcms.opt_weaponprices_note=NOTE: Lobby Price is 1/4 of the In-Mission Price.
-jcms.opt_weaponprices_class=Internal Name
-jcms.opt_weaponprices_name=Name
+jcms.opt_weaponprices=武器价格
+jcms.opt_weaponprices_note=注意: 大厅价格是任务期间价格的1/4.
+jcms.opt_weaponprices_class=内部名称
+jcms.opt_weaponprices_name=名称
 jcms.opt_weaponprices_base=Base
-jcms.opt_weaponprices_price=In-Mission Price
-jcms.opt_weaponprices_shopprice=Lobby Price
-jcms.opt_weaponprices_selected=%d weapon(s) selected
-jcms.opt_weaponprices_disable=Disable
-jcms.opt_weaponprices_restore=Restore Default Price
-jcms.opt_weaponprices_setmissionprice=Set IN-MISSION PRICE to...
+jcms.opt_weaponprices_price=任务期间价格
+jcms.opt_weaponprices_shopprice=大厅价格
+jcms.opt_weaponprices_selected=已选择 %d 把武器
+jcms.opt_weaponprices_disable=禁用
+jcms.opt_weaponprices_restore=恢复默认价格
+jcms.opt_weaponprices_setmissionprice=设置任务期间价格...
 jcms.opt_weaponprices_setmissionprice_desc=%d weapons will have their IN-MISSION price changed to this number, and their LOBBY PRICE to 1/4th of it.
-jcms.opt_weaponprices_setlobbyprice=Set LOBBY PRICE to...
+jcms.opt_weaponprices_setlobbyprice=设置大厅价格...
 jcms.opt_weaponprices_setlobbyprice_desc=%d weapons will have their LOBBY price changed to this number, and their IN-MISSION price to a number that is 4 times bigger.
-jcms.opt_orders=Order Menu
-jcms.opt_orders_note=NOTE: Set price to 0 to disable the order.
-jcms.opt_orders_cost=Cost (J)
-jcms.opt_orders_cooldown=Cooldown (s)
-jcms.opt_orders_reset=RESET TO DEFAULTS
+jcms.opt_orders=战略配备菜单
+jcms.opt_orders_note=注意: 如果成本设置为0那么代表禁用
+jcms.opt_orders_cost=成本 (J)
+jcms.opt_orders_cooldown=冷却时间 (s)
+jcms.opt_orders_reset=重置为默认值
 
-jcms.opt_tab_client=My Preferences
-jcms.opt_tab_server=Server/Game Settings
+jcms.opt_tab_client=我的偏好
+jcms.opt_tab_server=服务器/游戏设置
 
-jcms.antilag_title=Lagging?
-jcms.antilag_desc=To help with the lag, please do this:
-jcms.antilag_64bit=Switch to 64-bit Garry's Mod (Google how to)
-jcms.antilag_mcore=Enable multicore rendering (Click here!)
-jcms.chatplaceholder=Say something...
+jcms.antilag_title=卡顿?
+jcms.antilag_desc=想要解决卡顿, 请按下面操作进行:
+jcms.antilag_64bit=在属性→测试版中选择x86-64 - Chromium + 64-bit binaries
+jcms.antilag_mcore=然后启用多核渲染(点击这里可以开启)
+jcms.chatplaceholder=输入想要发的内容...
